src/objects/D2D_Proposal__c.object
<CustomObject>
    <description>The calculated values necessary to display a proposal in the D2D application.</description>
    <fields>
        <fullName>Annual_Consumption__c</fullName>
        <label>Annual Consumption</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Production__c</fullName>
        <formula>System_Size__c * Site_Quality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Utility_Rate__c</fullName>
        <label>Average Utility Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Savings__c</fullName>
        <description>Semi-colon delimited list of 25 values</description>
        <inlineHelpText>Semi-colon delimited list of 25 values</inlineHelpText>
        <label>Estimated Total Savings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Year1_Savings__c</fullName>
        <label>Estimated Year1 Savings</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Footnote__c</fullName>
        <label>Footnote</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gross_System_Price__c</fullName>
        <label>Gross System Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hudson_Monthly_Payment__c</fullName>
        <label>Hudson Monthly Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Investment__c</fullName>
        <label>Initial Investment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Location_Count__c</fullName>
        <label>Install Location Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>D2D Proposals</relationshipLabel>
        <relationshipName>D2D_Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lifetime_Savings__c</fullName>
        <label>Lifetime Savings</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Consumption__c</fullName>
        <label>Monthly Consumption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Savings_Average__c</fullName>
        <label>Monthly Savings Average</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Cost__c</fullName>
        <label>Net Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Panels__c</fullName>
        <label>Number of Panels</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payments_With_Solar__c</fullName>
        <description>Semi-colon delimited list of 25 values</description>
        <inlineHelpText>Semi-colon delimited list of 25 values</inlineHelpText>
        <label>Payments With Solar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payments_Without_Solar__c</fullName>
        <description>Semi-colon delimited list of 25 values</description>
        <inlineHelpText>Semi-colon delimited list of 25 values</inlineHelpText>
        <label>Payments Without Solar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Surface_Count__c</fullName>
        <label>Physical Surface Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDP_Inverter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SDP Inverter</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>D2D Proposals</relationshipLabel>
        <relationshipName>D2D_Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDP_Panel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SDP Panel</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>D2D Proposals (SDP Panel)</relationshipLabel>
        <relationshipName>D2D_Proposals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Savings_Percentage__c</fullName>
        <label>Savings Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Site_Quality__c</fullName>
        <label>Site Quality</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_Cost_per_kWH__c</fullName>
        <formula>( Hudson_Monthly_Payment__c * 12 ) / Annual_Production__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solar Cost per kWH</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>The 2 character USPS state abbreviation</description>
        <inlineHelpText>The 2 character USPS state abbreviation</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Upfront_Costs__c</fullName>
        <label>Total Upfront Costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Payments_With_Solar__c</fullName>
        <label>Total of Payments With Solar</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Payments_Without_Solar__c</fullName>
        <label>Total of Payments Without Solar</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twenty_Five_Year_Savings_Dollars__c</fullName>
        <label>25 Year Savings Dollars</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twenty_Five_Year_Savings_Percent__c</fullName>
        <label>25 Year Savings Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Master__c</fullName>
        <label>Utility Company</label>
        <referenceTo>Utility_Company_master__c</referenceTo>
        <relationshipLabel>D2D Proposals</relationshipLabel>
        <relationshipName>D2D_Proposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>D2D Proposal</label>
    <nameField>
        <displayFormat>D2D-{0000}</displayFormat>
        <label>D2D Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>D2D Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>